# cppbmad

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  TODO.md  pyproject.toml  regenerate.sh
.github/workflows/: conda-build.yml
code/: proxy_mod.f90  tao_proxies.cpp  tao_proxy_helpers.f90  test_struct_defs.f90
codegen/: __init__.py  __main__.py  arg.py  config.py  context.py  convert_header.cpp  convert_header.f90  coverage.py  cpp.py  create_interface.py  default.toml  docstring.py  enums.py  equality_header.cpp  exceptions.py  fortran.py  gen.py  interface_input_params.py  paths.py  proxy.py  proxy.tpl.cpp  proxy.tpl.hpp  py.py  pybind.tpl.cpp  pybind.tpl.hpp  routines.py  routines.tpl.cpp  routines.tpl.f90  routines.tpl.hpp  struct_config.toml  structs.py  tao_proxies.tpl.cpp  tao_proxies.tpl.hpp  test.toml  test_interface_input.py  to_string.tpl.cpp  to_string.tpl.hpp  transforms.py  types.py  util.py
codegen/struct_parser/: __init__.py  __main__.py  _version.py  config.py  fortran_json.py  parser.py  util.py
codegen/struct_parser/tests/: test_parsing.py
include/: bmad.hpp  bmad_enums.h  bmad_std_typedef.h  converter_templates.h  fortran_arrays.hpp  proxy_base.hpp  tao_proxies.hpp  to_string.hpp
include/bmad/: common_structs.hpp  convert.h  fortran_arrays.hpp  proxy_base.hpp  routines.hpp  tao_index.hpp  to_string.hpp  types.h
lattices/: branch_fork.bmad
python/: CMakeLists.txt
python/docs/: mkdocs.yml  pybmad
python/docs/source/: api.md
python/examples/: bbu.py  csr.py  parse.py  tao-plot.py  tao.py
python/include/: pybmad.hpp
python/include/pybmad/: arrays.hpp  common_structs.hpp  to_string.hpp
python/pybmad/: __init__.py  _pybmad.pyi
python/src/: arrays.cpp  common_structs.cpp
python/tests/: bbu.py  test_bbu.py  test_routines.py
src/: common_structs.cpp  proxy_base.cpp  tao_index.cpp  tao_proxy_helpers.f90  test_struct_defs.f90  to_string.cpp
src/tests/: test1.cpp  test_all_encompassing_proxy.cpp  test_arrays.cpp  test_csr.cpp  test_integration.cpp
src/tests/routines/: cppbmad_tests.f90
