[build-system]
requires = [
  "scikit-build-core>=0.11.6",
  "pybind11>=3.0",
  "cmake>=4.2.1",
  "pybind11-stubgen>=2.5.5",
]
build-backend = "scikit_build_core.build"

[project]
authors = [{ name = "Ken Lauer", email = "kenneth.lauer+bmad@gmail.com" }]
name = "pybmad"
description = "pybmad"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = ["pydantic"]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[tool.scikit-build]
cmake.version = ">=3.15"
wheel.packages = ["python/pybmad"]
# cmake.define = { BUILD_TYPE = "debug" }

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "python/pybmad/__init__.py"

# [tool.setuptools.package-data]
# 'bmad_cpp_codegen' = [
#   '*.yaml',
#   '*.tpl',
#   '*.cpp',
#   'templates/*.cpp',
#   'templates/*.f90',
# ]

[tool.setuptools.packages.find]
where = ["python/"]
include = ["pybmad"]
namespaces = false

[project.urls]
Homepage = "https://github.com/ken-lauer/cppbmad/"

[tool.ruff]
line-length = 110

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "ARG", # flake8-unused-arguments
  "C4",  # flake8-comprehensions
  "EM",  # flake8-errmsg
  "ICN", # flake8-import-conventions
  "G",   # flake8-logging-format
  "PGH", # pygrep-hooks
  "PIE", # flake8-pie
  "PL",  # pylint
  "PT",  # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "RET", # flake8-return
  "RUF", # Ruff-specific
  "SIM", # flake8-simplify
  "T20", # flake8-print
  "UP",  # pyupgrade
  "YTT", # flake8-2020
  "EXE", # flake8-executable
  "NPY", # NumPy specific rules
  "PD",  # pandas-vet
]
ignore = [
  "PLR09",   # Too many X
  "PLR2004", # Magic comparison
  "EM101",   # must assign to string literal
  "EM102",   # f-strings outside of exception
  "EM102",   # f-strings outside of exception
  "G004",    # f-strings in logging statements
  "SIM108",  # ternary required
  "PLW2901", # reassigning loop variable
]
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"codegen/gen.py" = ["T201"]
"codegen/structs.py" = ["E402"]
"python/examples/*.py" = ["T201"]

# [tool.setuptools_scm]
# version_file = "codegen/_version.py"
